testsuite/tests/libraries/should_fail/all.T


test('libfail001', normal, compile_fail, [''])
test('libfail002', normal, compile_fail, [''])
test('libfail003', normal, compile_fail, [''])
test('libfail004', normal, compile_fail, [''])
